[tool.poetry]
name = "make-scenario-with-video-flow"
version = "0.1.0"
description = ""
authors = ["MiyamotoRin <muhe.iroiro.thedoctor@digitalnature.slis.tsukuba.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
flask = "^3.0.0"
numpy = "^1.26.1"
opencv-python = "^4.8.1.78"
torch = "^2.1.1"
open-clip-torch = "^2.23.0"
usearch = "^2.8.13"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
